' Generated by UML Generator
' Encoded: dLLDZzem5BppAto45gIUKRLQAAL2MfLLGy-LrvwmrXexjPsiQDN-zZw7ptomf5m8iT-Ctuo7nxqFt8Lyetl-HPcCExvXGdFl9o4uzPG7B8GrYVe5zg7th2IOK4vez7hA1BYK2x0Lzo_Va5clWdLRzhl7sDzK6JdTVlTmFnQodzDp8SVimPhrW1xAXuyHTNSgdNYlrWRey_sNCOle2zLnQsBa0VJLXhvmu7J-3ZPadMXMu1jgBvIFjlR-dElyNC24DuKkdOIRRfFewKfjq2gyfBdhPjA5Mf9-F6EAy0gO2dp8ockDBuBh6G-8bKC68sjhpOE4pKqeN_tSkXdVtiwi2H0jB0F5vbRaFe4h57aPlHkXQkYuxd2ioHnIE1Y1yyBeGydtsB8TOIFwUBz6EEtxki4j716KPv8KNC8DcS5htFIj19Tf2wvL92P3AQtB0avRBY5hx7BlNjFCmYePYM8GvWxumZFV0Zu37gDC18csvVL6JvPPK1lwHSlTZT3EBKJmOQhjpnoFt3sWfAgpWEP78odKVrFSaxKQt9p2CaFASnqIyGoPQnnQTl-Tdr0PJkFQi3fK9D0GGT6a2uwwMkyB6yjblUC5TEd5hXcghI_5klGix-DA-ey1lQAoVqtWaBqjRxVVLHnLTv16DtXHs22ASl3FUPhgnlJR9tWK4_p9Qgqy7TxlEazehHnAbO4rs5iIWrEPB-z6eqOQhcNgLamjKbqWbJJSarZw1_u7
' URL: http://www.plantuml.com/plantuml/uml/dLLDZzem5BppAto45gIUKRLQAAL2MfLLGy-LrvwmrXexjPsiQDN-zZw7ptomf5m8iT-Ctuo7nxqFt8Lyetl-HPcCExvXGdFl9o4uzPG7B8GrYVe5zg7th2IOK4vez7hA1BYK2x0Lzo_Va5clWdLRzhl7sDzK6JdTVlTmFnQodzDp8SVimPhrW1xAXuyHTNSgdNYlrWRey_sNCOle2zLnQsBa0VJLXhvmu7J-3ZPadMXMu1jgBvIFjlR-dElyNC24DuKkdOIRRfFewKfjq2gyfBdhPjA5Mf9-F6EAy0gO2dp8ockDBuBh6G-8bKC68sjhpOE4pKqeN_tSkXdVtiwi2H0jB0F5vbRaFe4h57aPlHkXQkYuxd2ioHnIE1Y1yyBeGydtsB8TOIFwUBz6EEtxki4j716KPv8KNC8DcS5htFIj19Tf2wvL92P3AQtB0avRBY5hx7BlNjFCmYePYM8GvWxumZFV0Zu37gDC18csvVL6JvPPK1lwHSlTZT3EBKJmOQhjpnoFt3sWfAgpWEP78odKVrFSaxKQt9p2CaFASnqIyGoPQnnQTl-Tdr0PJkFQi3fK9D0GGT6a2uwwMkyB6yjblUC5TEd5hXcghI_5klGix-DA-ey1lQAoVqtWaBqjRxVVLHnLTv16DtXHs22ASl3FUPhgnlJR9tWK4_p9Qgqy7TxlEazehHnAbO4rs5iIWrEPB-z6eqOQhcNgLamjKbqWbJJSarZw1_u7
' Generated on: 2026-01-18T14:52:42.104490766

@startuml
skinparam classAttributeIconSize 0
hide circle

interface TaskRepository {
  ~findByUser_Id(userId: Long): List<Task>
  ~findByAssignee(assignee: User): List<Task>
  ~findByUserAndAssigneeNot(creator: User, assignee: User): List<Task>
  ~findByTeamId(teamId: Long): List<Task>
}

interface EventRepository {
  ~findByUser_IdOrderByStartTime(userId: Long): List<Event>
  ~findByUser_Id(userId: Long): List<Event>
  ~findByUser_IdAndStartTimeBetween(userId: Long, start: LocalDateTime, end: LocalDateTime): List<Event>
  ~countEventsForDay(userId: Long, start: LocalDateTime, end: LocalDateTime): long
}

class FocusService {
  -eventRepository: EventRepository
  -preferenceRepository: UserFocusPreferenceRepository
  --
  +getPreferences(userId: Long): UserFocusPreference
  +updatePreferences(userId: Long, newPrefs: UserFocusPreference): UserFocusPreference
  +validateDayNotOverloaded(userId: Long, dateTime: LocalDateTime): void
  +findFreeGaps(userId: Long, date: LocalDate): List<TimeSlot>
  +getOptimizedFocusSlots(userId: Long, date: LocalDate): List<TimeSlot>
  +estBloqueParLeFocus(userId: Long, debut: LocalDateTime, fin: LocalDateTime): boolean
}

class DefaultScheduleOptimizerService {
  -eventRepository: EventRepository
  -taskRepository: TaskRepository
  -taskSelectionStrategy: TaskSelectionStrategy
  -travelTimeService: TravelTimeService
  -focusService: FocusService
  --
  +DefaultScheduleOptimizerService(eventRepository: EventRepository, taskRepository: TaskRepository, taskSelectionStrategy: TaskSelectionStrategy, travelTimeService: TravelTimeService, focusService: FocusService)
  +reshuffle(userId: Long): void
  -findCollision(start: LocalDateTime, end: LocalDateTime, events: List<Event>): Event
}

FocusService *-- EventRepository
DefaultScheduleOptimizerService *-- EventRepository
DefaultScheduleOptimizerService *-- TaskRepository
DefaultScheduleOptimizerService *-- FocusService
@enduml